# lintelligence

./: .gitignore  LICENSE  README.md  architecture_diagram_high_level.md  lintelligence.sh  pipeline_detector.py  pyproject.toml  rate_limiter.py  requirements.txt  setup.py  smart_validator.py  validation_cache.py
llm_providers/: __init__.py  anthropic_provider.py  base.py  cli_help.py  factory.py  openai_provider.py
src/nextflow_pipeline_analyzer/: __init__.py
src/nextflow_pipeline_analyzer/cli/: main.py
